--- a/ex03-calculadora.html
+++ b/ex03-calculadora.html
@@ -26,6 +26,34 @@
             e informe o resultado usando document.write().
         */
 
+        //parseFloat() *tenta* converter string em números de ponto flutuante
+        let num1 = presentFloat(prompt('Informe o primeiro número:'))
+        let num2 = presentFloat(prompt('Informe o segundo número:'))
+        let num3 = prompt('Informe a operação desejada (+, -, *, x, X, / ou :):')
+
+        let res
+
+        //Teste de validação dos números
+        if(isNaN(num1)) || isNaN(num2)) {
+            alert('ERRO: pelo menos um dos números informados é inválido.')
+        }
+        else if(oper == '+') {
+            res = num1 + num2
+        }
+        else if(oper == '-') {
+            res = num1 - num2
+        }
+        else if(oper == '*' || oper == 'X' || oper == 'x') {
+            res = num1 * num2
+        }
+        else if(oper == '/' || oper == ':') {
+            res = num1 / num2
+        }
+        else {
+            alert('ERRO: o operador informado é inválido.')
+        }
+        document.write('O resultado da operação: ' + num1 + ' ' + oper + ' ' + num2 + 'é igual a ' + res + '.')
+
     </script>
 </head>
 <body>
