--- a/ex04-dias-mes.html
+++ b/ex04-dias-mes.html
@@ -22,7 +22,16 @@
             ABRIL, JUNHO, SETEMBRO e NOVEMBRO: 30 dias
             FEVEREIRO: 28 dias (29 em anos bissextos)
         */
+        //let mes = parseInt(prompt('Informe o número de um mês (de 1 a 12):'))
 
+        let mes
+        do {
+            do {
+                mes = parseInt(prompt('Informe o número de um mês (de 1 a 12):'))
+            }
+        }
+
+        document.write(mes)
     </script>
 </head>
 <body>
