--- a/ex03-calculadora.html
+++ b/ex03-calculadora.html
@@ -27,17 +27,18 @@
         */
 
         //parseFloat() *tenta* converter string em números de ponto flutuante
-        let num1 = presentFloat(prompt('Informe o primeiro número:'))
-        let num2 = presentFloat(prompt('Informe o segundo número:'))
+        let num1 = parseFloat(prompt('Informe o primeiro número:'))
+        let num2 = parseFloat(prompt('Informe o segundo número:'))
         let num3 = prompt('Informe a operação desejada (+, -, *, x, X, / ou :):')
 
         let res
+        document.write(`O resultado da operação:`)
 
         //Teste de validação dos números
-        if(isNaN(num1)) || isNaN(num2)) {
-            alert('ERRO: pelo menos um dos números informados é inválido.')
-        }
-        else if(oper == '+') {
+        //if(isNaN(num1)) || isNaN(num2)) {
+           // alert('ERRO: pelo menos um dos números informados é inválido.')
+        //}
+        if(oper == '+') {
             res = num1 + num2
         }
         else if(oper == '-') {
@@ -49,10 +50,11 @@
         else if(oper == '/' || oper == ':') {
             res = num1 / num2
         }
-        else {
+        /*else {
             alert('ERRO: o operador informado é inválido.')
-        }
-        document.write('O resultado da operação: ' + num1 + ' ' + oper + ' ' + num2 + 'é igual a ' + res + '.')
+        }*/
+    document.write(`O resultado da operação:`)
+        
 
     </script>
 </head>
