--- a/ex08-for-intervalo.html
+++ b/ex08-for-intervalo.html
@@ -17,6 +17,11 @@
             valores da variável de controle que sejam múltiplos de 7.
 
         */
+       for(let i = 1; i <= 1000; i+=3) {
+           if(i %7 ==0) {
+            document.write(i + '<br>')
+           }
+        }
 
     </script>
 </head>
